--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/card": "^2.0.28",
+    "@nextui-org/navbar": "^2.0.30",
     "@nextui-org/react": "^2.3.6",
     "framer-motion": "^11.2.3",
     "next": "14.2.3",
