--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@nextui-org/button": "^2.0.31",
     "@nextui-org/card": "^2.0.28",
+    "@nextui-org/checkbox": "^2.0.29",
     "@nextui-org/navbar": "^2.0.30",
     "@nextui-org/react": "^2.3.6",
+    "@nextui-org/select": "^2.1.27",
     "framer-motion": "^11.2.3",
     "lucide": "^0.378.0",
     "lucide-react": "^0.378.0",
